// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rule inventory snapshot > defaults (codeQuality/explicitTypes off) 1`] = `
{
  "@typescript-eslint": [
    "@typescript-eslint/ban-ts-comment",
    "@typescript-eslint/no-array-constructor",
    "@typescript-eslint/no-duplicate-enum-values",
    "@typescript-eslint/no-empty-object-type",
    "@typescript-eslint/no-explicit-any",
    "@typescript-eslint/no-extra-non-null-assertion",
    "@typescript-eslint/no-misused-new",
    "@typescript-eslint/no-namespace",
    "@typescript-eslint/no-non-null-asserted-optional-chain",
    "@typescript-eslint/no-require-imports",
    "@typescript-eslint/no-this-alias",
    "@typescript-eslint/no-unnecessary-type-constraint",
    "@typescript-eslint/no-unsafe-declaration-merging",
    "@typescript-eslint/no-unsafe-function-type",
    "@typescript-eslint/no-unused-expressions",
    "@typescript-eslint/no-unused-vars",
    "@typescript-eslint/no-wrapper-object-types",
    "@typescript-eslint/prefer-as-const",
    "@typescript-eslint/prefer-namespace-keyword",
    "@typescript-eslint/triple-slash-reference",
  ],
  "core": [
    "for-direction",
    "no-async-promise-executor",
    "no-case-declarations",
    "no-compare-neg-zero",
    "no-cond-assign",
    "no-constant-binary-expression",
    "no-constant-condition",
    "no-control-regex",
    "no-debugger",
    "no-delete-var",
    "no-dupe-else-if",
    "no-duplicate-case",
    "no-empty",
    "no-empty-character-class",
    "no-empty-pattern",
    "no-empty-static-block",
    "no-ex-assign",
    "no-extra-boolean-cast",
    "no-fallthrough",
    "no-global-assign",
    "no-invalid-regexp",
    "no-irregular-whitespace",
    "no-loss-of-precision",
    "no-misleading-character-class",
    "no-nonoctal-decimal-escape",
    "no-octal",
    "no-prototype-builtins",
    "no-regex-spaces",
    "no-self-assign",
    "no-shadow-restricted-names",
    "no-sparse-arrays",
    "no-unassigned-vars",
    "no-unreachable",
    "no-unsafe-finally",
    "no-unsafe-optional-chaining",
    "no-unused-labels",
    "no-unused-private-class-members",
    "no-useless-assignment",
    "no-useless-backreference",
    "no-useless-catch",
    "no-useless-escape",
    "no-var",
    "prefer-const",
    "prefer-rest-params",
    "prefer-spread",
    "preserve-caught-error",
    "require-yield",
    "sort-imports",
    "use-isnan",
    "valid-typeof",
  ],
  "import-x": [
    "import-x/first",
    "import-x/no-duplicates",
    "import-x/order",
  ],
  "kj": [
    "kj/no-pure-type-alias",
  ],
}
`;

exports[`rule inventory snapshot > everything on (codeQuality + explicitTypes) 1`] = `
{
  "@typescript-eslint": [
    "@typescript-eslint/ban-ts-comment",
    "@typescript-eslint/consistent-type-assertions",
    "@typescript-eslint/consistent-type-imports",
    "@typescript-eslint/explicit-function-return-type",
    "@typescript-eslint/explicit-module-boundary-types",
    "@typescript-eslint/no-array-constructor",
    "@typescript-eslint/no-duplicate-enum-values",
    "@typescript-eslint/no-empty-object-type",
    "@typescript-eslint/no-explicit-any",
    "@typescript-eslint/no-extra-non-null-assertion",
    "@typescript-eslint/no-misused-new",
    "@typescript-eslint/no-namespace",
    "@typescript-eslint/no-non-null-asserted-optional-chain",
    "@typescript-eslint/no-require-imports",
    "@typescript-eslint/no-this-alias",
    "@typescript-eslint/no-unnecessary-type-constraint",
    "@typescript-eslint/no-unsafe-declaration-merging",
    "@typescript-eslint/no-unsafe-function-type",
    "@typescript-eslint/no-unused-expressions",
    "@typescript-eslint/no-unused-private-class-members",
    "@typescript-eslint/no-unused-vars",
    "@typescript-eslint/no-wrapper-object-types",
    "@typescript-eslint/prefer-as-const",
    "@typescript-eslint/prefer-namespace-keyword",
    "@typescript-eslint/triple-slash-reference",
  ],
  "core": [
    "for-direction",
    "no-async-promise-executor",
    "no-case-declarations",
    "no-compare-neg-zero",
    "no-cond-assign",
    "no-constant-binary-expression",
    "no-constant-condition",
    "no-control-regex",
    "no-debugger",
    "no-delete-var",
    "no-dupe-else-if",
    "no-duplicate-case",
    "no-empty",
    "no-empty-character-class",
    "no-empty-pattern",
    "no-empty-static-block",
    "no-ex-assign",
    "no-extra-boolean-cast",
    "no-fallthrough",
    "no-global-assign",
    "no-invalid-regexp",
    "no-irregular-whitespace",
    "no-loss-of-precision",
    "no-misleading-character-class",
    "no-nonoctal-decimal-escape",
    "no-octal",
    "no-prototype-builtins",
    "no-regex-spaces",
    "no-self-assign",
    "no-shadow-restricted-names",
    "no-sparse-arrays",
    "no-unassigned-vars",
    "no-unreachable",
    "no-unsafe-finally",
    "no-unsafe-optional-chaining",
    "no-unused-labels",
    "no-unused-private-class-members",
    "no-useless-assignment",
    "no-useless-backreference",
    "no-useless-catch",
    "no-useless-escape",
    "no-var",
    "prefer-const",
    "prefer-rest-params",
    "prefer-spread",
    "preserve-caught-error",
    "require-yield",
    "sort-imports",
    "use-isnan",
    "valid-typeof",
  ],
  "import-x": [
    "import-x/first",
    "import-x/no-duplicates",
    "import-x/order",
  ],
  "kj": [
    "kj/no-pure-type-alias",
  ],
  "sonarjs": [
    "sonarjs/no-all-duplicated-branches",
    "sonarjs/no-duplicated-branches",
    "sonarjs/no-identical-conditions",
    "sonarjs/no-identical-expressions",
    "sonarjs/no-identical-functions",
  ],
  "unused-imports": [
    "unused-imports/no-unused-imports",
  ],
}
`;
